<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/rounded_corners">

    <com.example.chatapp.fonts.PTSansRegular
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_or_select_image"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/cameraContainer"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/galleryContainer"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/galleryContainer"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/cameraContainer"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cameraIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintTop_toTopOf="@id/cameraContainer"
        app:layout_constraintBottom_toTopOf="@id/cameraText"
        app:layout_constraintStart_toStartOf="@id/cameraContainer"
        app:layout_constraintEnd_toEndOf="@id/cameraContainer"
        app:tint="@color/blue" />

    <com.example.chatapp.fonts.PTSansRegular
        android:id="@+id/cameraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cameraIcon"
        app:layout_constraintStart_toStartOf="@id/cameraContainer"
        app:layout_constraintEnd_toEndOf="@id/cameraContainer"
        app:layout_constraintBottom_toBottomOf="@id/cameraContainer" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/galleryIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_insert_photo_24"
        app:layout_constraintTop_toTopOf="@id/galleryContainer"
        app:layout_constraintBottom_toTopOf="@id/galleryText"
        app:layout_constraintStart_toStartOf="@id/galleryContainer"
        app:layout_constraintEnd_toEndOf="@id/galleryContainer"
        app:tint="@color/blue" />

    <com.example.chatapp.fonts.PTSansRegular
        android:id="@+id/galleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/galleryIcon"
        app:layout_constraintStart_toStartOf="@id/galleryContainer"
        app:layout_constraintEnd_toEndOf="@id/galleryContainer"
        app:layout_constraintBottom_toBottomOf="@id/galleryContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
