<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:id="@+id/otp_fragment"
    tools:context=".sigin.OtpFragment">

    <View
        android:id="@+id/otp_verify"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corners"
        android:layout_margin="20dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toTopOf="@id/otp_verify"
                app:layout_constraintStart_toStartOf="@id/otp_verify"
                app:layout_constraintBottom_toTopOf="@+id/enter_otp"
                app:layout_constraintEnd_toEndOf="@id/otp_verify"
                android:layout_marginBottom="30dp" />

            <com.example.chatapp.fonts.PTSansBold
                android:id="@+id/enter_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:text="@string/enter_your_otp"/>

            <com.example.chatapp.fonts.PTBoldEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="4"
                android:layout_margin="40dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/otp_verify"
                app:layout_constraintStart_toStartOf="@id/otp_verify"
                app:layout_constraintBottom_toTopOf="@+id/verifyButton"
                app:layout_constraintTop_toBottomOf="@+id/enter_otp"
                android:background="@drawable/edit_box" />

            <com.example.chatapp.fonts.PTSansRegular
                android:id="@+id/verifyButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@id/otp_verify"
                app:layout_constraintStart_toStartOf="@id/otp_verify"
                app:layout_constraintBottom_toBottomOf="@+id/otp_verify"
                app:layout_constraintTop_toBottomOf="@+id/otp"
                android:text="@string/verify_otp" />

    <View
        android:id="@+id/popup"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corners"
        android:visibility="gone"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/green_tick"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round"
        android:src="@drawable/baseline_done_24"
        android:padding="15dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@id/popup"
        app:layout_constraintStart_toStartOf="@id/popup"
        app:layout_constraintBottom_toTopOf="@+id/text_successful"
        app:layout_constraintEnd_toEndOf="@id/popup"/>

    <com.example.chatapp.fonts.PTSansBold
        android:id="@+id/text_successful"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_verified"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="100dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/popup"
        app:layout_constraintEnd_toEndOf="@id/popup"
        app:layout_constraintStart_toStartOf="@id/popup"
        app:layout_constraintTop_toBottomOf="@+id/green_tick" />

</androidx.constraintlayout.widget.ConstraintLayout>
